# iwanna-gm8-web-engine

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  Dockerfile  LICENSE  NOTICE.md  README-CN.md  README.md
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: release.yml
crates/iwm-api/: Cargo.toml
crates/iwm-api/src/: main.rs
crates/iwm-cli/: Cargo.toml
crates/iwm-cli/src/: main.rs
crates/iwm-cli/tests/: runtime_scenario.rs  sample_audit.rs  validate_package.rs
crates/iwm-detector/: Cargo.toml
crates/iwm-detector/src/: detect.rs  lib.rs  models.rs  package.rs  signatures.rs
crates/iwm-detector/tests/: detect_directory.rs  detect_zip.rs
crates/iwm-parser/: Cargo.toml
crates/iwm-parser/src/: event_tags.rs  gm8_adapter.rs  gml_lowering.rs  lib.rs  logic_export.rs  models.rs  package_builder.rs  raw_logic_export.rs  resource_export.rs
crates/iwm-parser/src/gml_lowering/: action.rs  expression.rs  source.rs  statement.rs  syntax.rs
crates/iwm-parser/tests/: build_package_smoke.rs  event_tag_contract.rs  gml_lowering_precedence.rs  logic_lowering_contract.rs  package_contract.rs  resource_export_contract.rs
crates/iwm-runtime-core/: Cargo.toml
crates/iwm-runtime-core/src/: core.rs  debug_input.rs  diagnostics.rs  event_dispatch.rs  helpers.rs  lib.rs  logic.rs  movement.rs  path.rs  render.rs  room_builder.rs  room_transitions.rs  tick_context.rs  types.rs
crates/iwm-runtime-host/: Cargo.toml
crates/iwm-runtime-host/src/: audio.rs  clock.rs  diagnostics.rs  externals.rs  files.rs  headless.rs  input.rs  lib.rs  render.rs  traits.rs  types.rs
crates/iwm-runtime-model/: Cargo.toml
crates/iwm-runtime-model/src/: lib.rs  raw_logic.rs  validation.rs
crates/iwm-runtime-model/tests/: validation.rs
crates/iwm-runtime-web/: Cargo.toml
crates/iwm-runtime-web/src/: audio_host.rs  bridge_buffer.rs  bridge_types.rs  ffi.rs  file_host.rs  lib.rs  result_store.rs  translate.rs  web_runtime_host.rs
crates/iwm-runtime-web/tests/: bridge_buffer.rs  bridge_json.rs  local_package_smoke.rs  web_runtime_host.rs
crates/iwm-runtime-web/tests/support/: mod.rs
docs/notes/: beta-release.md  opengmk-host-coupling-audit.md  package-format-v0.md  package-format-v1-runtime.md  runtime-core-map.md  runtime-gold-sample.md  runtime-performance-optimization.md  runtime-vendor-reference-map.md  runtime-wasm-gap-analysis.md  sample-corpus.md  testing-strategy.md
docs/notes/runtime-scenarios/: README.md  ariotrials-select-stage-player.json  crimson-v1-title-idle.json  dife-room143-hold-jump.json  dife-room143-move-right.json  dife-room143-release-cut.json  dife-room143-shoot.json  dife-room143-tap-jump.json  dife-room151-death-right.json  dife-room151-death-then-reset.json  dife-room151-r-reset.json
docs/superpowers/plans/: 2026-05-19-gm8-detector-foundation.md  2026-05-19-gm8-parser-and-package-builder.md  2026-05-19-runtime-shell-and-static-room-viewer.md  2026-05-20-minimal-playable-runtime.md  2026-05-20-opengmk-wasm-first-runtime.md  2026-05-20-wasm-browser-input-render-loop.md  2026-05-21-documentation-governance-and-cleanup.md  2026-05-21-parser-and-runtime-next-steps.md  2026-05-21-runtime-rust-modularization.md  2026-05-21-runtime-shell-observability-and-browser-assertions.md  2026-05-21-vendor-guided-wasm-runtime-next-steps.md  (+3 more)
runtime/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
runtime/scripts/: sync-wasm.mjs
runtime/src/: loadPackage.test.ts  loadPackage.ts  main.test.ts  main.test.tsx  main.ts  main.tsx  styles.css  types.ts
runtime/src/app/: App.tsx  (+4 more)
samples/: README.md
scripts/: build-beta.ps1
(+113 files in other folders)
