[workspace]
resolver = "2"
members = [
  "crates/iwm-detector",
  "crates/iwm-parser",
  "crates/iwm-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
walkdir = "2.5"
zip = "2.1"
