[package]
name = "iwm-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
iwm-detector = { path = "../iwm-detector" }
iwm-parser = { path = "../iwm-parser" }
iwm-runtime-model = { path = "../iwm-runtime-model" }
serde.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tower.workspace = true
