[package]
name = "iwm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
iwm-detector = { path = "../iwm-detector" }
iwm-parser = { path = "../iwm-parser" }
iwm-runtime-core = { path = "../iwm-runtime-core" }
iwm-runtime-host = { path = "../iwm-runtime-host" }
iwm-runtime-model = { path = "../iwm-runtime-model" }
