[package]
name = "iwm-runtime-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
iwm-runtime-core = { path = "../iwm-runtime-core" }
iwm-runtime-host = { path = "../iwm-runtime-host" }

[dev-dependencies]
iwm-parser = { path = "../iwm-parser" }
